fixed navbar position and spacing

--- a/client/src/css/Adoption.css
+++ b/client/src/css/Adoption.css
@@ -5,4 +5,5 @@
     background-size: cover;
     height: 100vh;
     width: 100%;
+    background-repeat: repeat;
 }
