--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -5,5 +5,6 @@
     background-size: cover;
     height: 100vh;
     width: 100%;
+    background-repeat: repeat-y;
 }   
 
